styles.css
*, 
*::before, 
*::after {
    box-sizing: border-box;
}

body {
    --red: #961719;
    --lightred: #ab4547;
    --grey: #858585;
    --darkgrey: #404040;

    font-family: 'Source Sans Pro', sans-serif;
    color: var(--darkgrey);
    margin: 0;
}

/* Flex containers */

.intro,
.main-content {
    display: flex;
    flex-direction: column;
    padding-left: 2em;
    padding-right: 2em;
}

/* Typography */

h1 {
    color: var(--darkgrey);
    font-size: calc(.9rem + 4vw);
    margin: .16em 0;
}

h2 {
    color: var(--red);
    font-size: 2.5rem;
    font-weight: 400;
    margin: .5em 0 .25em;
}

h3 {
    color: var(--red);
    font-size: calc(.9rem + 3vw);
    font-weight: 400;
    margin: 0;
    text-align: center;
}

.subheading {
    color: var(--red);
    font-weight: 900;
    margin-bottom: 1em;
    text-transform: uppercase;
}

p {
    font-size: 1.125rem;
    line-height: 1.35;
}

a {
    text-decoration: none;
}

.fine-print {
    font-size: 0.75rem;
    letter-spacing: 1px;
    color: var(--grey);
}

/* Intro */

.intro {
    justify-content: space-between;
    text-align: center;
    min-height: 100vh;
    color: #fff;
    background: black url("/img/mdf-2024.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    padding-bottom: 1.5em;
}

/* Main content */

.main-content {
    align-items: center;
    padding: 2.5em 1em 1.5em;
}

.img-main {
    width: 100%;
}

.main-content p,
form {
    max-width: 450px;
}

/* Form */

form {
    margin: 1em 0;
}

input,
.btn {
    font-family: inherit;
    width: 100%;
    border-radius: 5px;
}

input {
    margin-bottom: .75em;
    padding: .5em;
    border: 2px solid #D1D5DB;
}

input:focus {
    outline: none;
    border-color: var(--grey);
    background-color: #E6E8EC;
}

.btn {
    text-transform: uppercase;
    font-weight: 800;
    letter-spacing: 1px;
    outline: none;
    border: none;
    padding: 1em 0;
}

.btn-primary {
    margin-top: 1em;
    background-color: var(--red);
    color: #fff;
}

.btn-primary:hover,
.btn-primary:focus {
    background-color: var(--lightred);
    cursor: pointer;
}

/* Footer */

footer {
    background-color: var(--grey);
    display: flex;
    justify-content: space-around;
    min-width: 14rem;
    padding: .5rem 2rem;
    box-sizing: border-box;
    border-radius: 5px;
    margin-top: 3rem;
}

footer a {
    display: block;
}

footer img:hover {
    transform: scale(1.1);
}

/* Media queries */

@media screen and (min-width: 576px) {
    body {
        display: flex;
    }

    .intro,
    .main-content {
        width: 50%;
    }

    .intro {
        min-height: 100vh;
    }

    .main-content {
        justify-content: center;
        padding-top: 0;
    }

    h1 {
        font-size: calc(1rem + 2vw);
    }

    h2 {
        font-size: 5vw;
    }
}

